# BitcoinZ-black-amber

./: .gitignore  ANDROID_BUILD_GUIDE.md  BIRTHDAY_BLOCK_IMPLEMENTATION.md  CLAUDE.md  CONTENT_HASH_FIX.md  CROSS_PLATFORM_MIGRATION.md  IMPLEMENTATION_SUMMARY.md  README.md  RUST_BRIDGE_FIX.md  RUST_BRIDGE_SERIALIZATION_FIX.md  RUST_BRIDGE_WORKAROUND.md  WALLET_CREATION_FLOW_FIX.md  WALLET_CREATION_VIA_RUST.md  WALLET_DATA_CLEANUP.md  android_logs.txt  clear_storage.dart  delete_wallet_data.sh  export_functionality_fixed.md  flutter_logs.txt  force_fresh_setup.dart  pubspec.yaml  test_cli_detection.dart  test_cli_standalone.dart  test_export_functionality.md  test_ffi_debug.dart  test_ffi_strings.dart  test_shielded_send.dart  test_sync.dart  test_sync_parse.dart
.github/workflows/: cross-platform-build.yml
Frameworks/: libbitcoinz_mobile.dylib
android/app/: build.gradle.kts
ios/Runner/: Info.plist
lib/: main.dart
lib/models/: address_label.dart  address_label.g.dart  address_model.dart  analytics_data.dart  balance_model.dart  balance_model.g.dart  contact_model.dart  currency_model.dart  message_label.dart  message_label.g.dart  notification_models.dart  notification_models.g.dart  transaction.dart  transaction_category.dart  transaction_model.dart  transaction_model.g.dart  wallet_model.dart  wallet_model.g.dart
lib/providers/: auth_provider.dart  contact_provider.dart  currency_provider.dart  interface_provider.dart  network_provider.dart  notification_provider.dart  wallet_provider.dart
lib/screens/: main_screen.dart  splash_screen.dart
lib/services/: android_power_service.dart  background_notification_service.dart  battery_optimization_prompt.dart  bitcoinz_rust_service.dart  bitcoinz_service.dart  contact_service.dart  currency_service.dart  database_service.dart  foreground_sync_manager.dart  image_helper_service.dart  network_service.dart  notification_navigation_service.dart  notification_service.dart  notification_test_service.dart  qr_service.dart  send_prefill_bus.dart  sharing_service.dart  storage_service.dart  wallet_storage_service.dart
lib/utils/: constants.dart  formatters.dart  logger.dart  responsive.dart  validators.dart
lib/widgets/: address_label_dialog.dart  address_selector_widget.dart  analytics_charts.dart  analytics_summary_cards.dart  animated_confirming_text.dart  animated_progress_dots.dart  balance_card.dart  connection_status_widget.dart  enhanced_amount_input.dart  message_label_dialog.dart  notification_badge.dart  quick_actions.dart  recent_transactions.dart  sending_progress_overlay.dart  sync_details_dialog.dart  sync_progress_overlay.dart  sync_status_card.dart  transaction_category_chip.dart  transaction_confirmation_dialog.dart  transaction_success_dialog.dart  wallet_creation_progress_dialog.dart  wallet_restore_success_dialog.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
network-monitor/: README.md  network-monitor.js  package-lock.json  package.json
network-monitor/captured-requests/: request-1-GET-1754932296991.json  request-1-GET-1754932297229.json  request-1-GET-1755006390075.json  request-1-GET-1755006390251.json  request-10-GET-1754932331272.json  request-10-GET-1754932331382.json  request-10-GET-1755006453179.json  request-10-GET-1755006453189.json  request-11-GET-1754932360251.json  request-11-GET-1755006455524.json  request-11-GET-1755006455531.json  request-12-GET-1755006455528.json  request-12-GET-1755006455532.json  request-12-POST-1754932360261.json  request-13-GET-1754932362891.json  request-13-GET-1755006458717.json  request-13-GET-1755006458740.json  request-14-GET-1754932362901.json  request-14-GET-1754932362917.json  request-14-GET-1755006458724.json  request-14-GET-1755006458747.json  request-15-GET-1754932362906.json  request-15-GET-1754932362924.json  request-15-GET-1755006517969.json  request-15-GET-1755006518047.json  request-16-GET-1754932405719.json  request-16-GET-1754932405740.json  (+53 more)
rust/: Cargo.toml
rust/src/: api.rs  frb_generated.rs
rust/zecwalletlitelib/: Cargo.toml
rust/zecwalletlitelib/src/: bitcoinz_params.rs  commands.rs  lightclient.rs  lightwallet.rs
rust/zecwalletlitelib/src/lightclient/: lightclient_config.rs
rust/zecwalletlitelib/src/lightwallet/: wallet_txns.rs
test/: address_handling_fixes_test.dart  btcz_cli_test.dart  cli_wallet_test.dart  enhanced_payment_request_test.dart
tool/: generate_app_icon_foreground.dart
(+52 files in other folders)
