[package]
name = "zecwalletlitelib"
version = "0.1.0"
authors = ["Aditya Kulkarni <adityapk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["embed_params"]
embed_params = []
zfuture = []


[dependencies]
arr_macro = "0.1.3"
base64 = "0.13.0"
bytes = "0.4"
log4rs = "1.1.1"
rand = "0.8.5"
http = "0.2.4"
tonic = {version = "0.7.2", features = ["tls", "tls-roots"]}
prost = "0.10.4"
tokio =  { version = "1.20.0", features = ["full"] }
tokio-stream = "0.1.9"
tokio-rustls = "0.23.4"
futures = "0.3.21"
log = "0.4.14"
hex = "0.3"
ring = "0.16.20"
dirs = "3.0.2"
json = "0.12.4"
webpki-roots = "0.21.0"

lazy_static = "1.4.0"
secp256k1 = "=0.21.3"
ripemd160 = "0.9.1"
sha2 = "0.9.5"
base58 = "0.1.0"
tiny-bip39 = "0.8.0"
sodiumoxide = "0.2.5"
byteorder = "1"

pairing = "0.22"
ff = "0.12"
jubjub = "0.9.0"
bls12_381 = "0.7"
group = "0.12"

rust-embed = { version = "6.3.0", features = ["debug-embed"] }

orchard = { git = "https://github.com/adityapk00/orchard", rev = "0a960a380f4e9c3472c9260f3df61cd5e50d51b0" }
incrementalmerkletree = "0.3"

#zcash_address = "0.1.0"
#zcash_primitives = { version = "0.7.0", features = ["transparent-inputs"] }
#zcash_client_backend = "0.5.0"
#zcash_proofs = { version = "0.7.1",  features = ["multicore"] }
#zcash_encoding = "0.1.0"
#zcash_note_encryption = { version = "0.1.0", features = ["pre-zip-212"] }

# Use consistent versions from git to avoid conflicts
zcash_address = { git = "https://github.com/adityapk00/librustzcash", rev = "adf49f8b848a5ac85e1476354614eeae9880206a"}
zcash_primitives = { git = "https://github.com/adityapk00/librustzcash", rev = "adf49f8b848a5ac85e1476354614eeae9880206a", features = ["transparent-inputs"] }
zcash_client_backend = { git = "https://github.com/adityapk00/librustzcash", rev = "adf49f8b848a5ac85e1476354614eeae9880206a"}
zcash_proofs = { git = "https://github.com/adityapk00/librustzcash", rev = "adf49f8b848a5ac85e1476354614eeae9880206a", features = ["multicore"]}
zcash_encoding = { git = "https://github.com/adityapk00/librustzcash", rev = "adf49f8b848a5ac85e1476354614eeae9880206a"}
zcash_note_encryption = { git = "https://github.com/adityapk00/librustzcash", rev = "adf49f8b848a5ac85e1476354614eeae9880206a", features = ["pre-zip-212"]}

[dev-dependencies]
portpicker = "0.1.1"
tempdir = "0.3.7"

[build-dependencies]
tonic-build = "0.7.2"
